<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="question">How was the service?</string>
    <string name="radio_amazing">Amazing (20%)</string>
    <string name="radio_good">Good (18%)</string>
    <string name="radio_okay">Okay (15%)</string>
    <string name="round_up">Round up tip?</string>
    <string name="button_calculate">CALCULATE</string>
    <string name="tip_amount_awal">Tip Amount</string>
    <string name="tip_amount">Tip Amount: $%s</string>
    <string name="invalid_cost">Invalid cost</string>
</resources>